<resources>
    <string name="app_name">E-Library</string>
    <string name="welcome">Welcome to E-Library</string>
    <string name="login">Login</string>
    <string name="signup">Sign Up</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="or_login_with">Or login with</string>
    <string name="google_login">Login with Google</string>
    <string name="no_account">Don\'t have an account? Sign Up</string>
    <string name="have_account">Already have an account? Login</string>
    <string name="scan_qr">Scan QR Code</string>
    <string name="borrow_book">Borrow Book</string>
    <string name="return_book">Return Book</string>
    <string name="search_hint">Search books...</string>
    <string name="books">Books</string>
    <string name="profile">Profile</string>
    <string name="admin">Admin</string>
    <string name="my_books">My Books</string>
    <string name="borrowing_history">Borrowing History</string>
    <string name="due_date">Due Date: %s</string>
    <string name="available">Available</string>
    <string name="unavailable">Unavailable</string>
    <string name="reserve">Reserve</string>
    <string name="add_book">Add Book</string>
    <string name="title">Title</string>
    <string name="author">Author</string>
    <string name="genre">Genre</string>
    <string name="description">Description</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="error_invalid_email">Please enter a valid email</string>
    <string name="error_password_length">Password must be at least 6 characters</string>
    <string name="error_password_mismatch">Passwords don\'t match</string>
    <string name="error_required_field">This field is required</string>
    <string name="success_book_added">Book added successfully</string>
    <string name="success_book_borrowed">Book borrowed successfully</string>
    <string name="success_book_returned">Book returned successfully</string>
    <string name="notification_due_date">Your book \"%s\" is due tomorrow</string>
    <string name="notification_overdue">Your book \"%s\" is overdue</string>
</resources>